--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,24 +1,24 @@
 name: dart_coveralls
-version: 0.6.0+4
+version: 0.6.0+5
 author: Axel Christ <adracus@gmail.com>
 description: |-
   Pub package to calculate coverage, format it
   to LCOV and send it to coveralls
 homepage: https://github.com/block-forest/dart-coveralls
 environment:
-  sdk: '>=2.0.0-dev.64.1 <3.0.0'
+  sdk: '>=2.12.0-dev.64.1 <3.0.0'
 dependencies:
-  args: '>=0.12.1 <2.0.0'
-  coverage: ^0.12.0
-  crypto: ^2.0.1
-  file: ^5.0.0
-  http: '>=0.11.1+1 <0.12.0'
-  logging: '>=0.9.2 <0.12.0'
-  path: ^1.3.0
-  stack_trace: ^1.3.2
-  yaml: ^2.1.2
+  args: ^2.3.0
+  coverage: ^1.0.3
+  crypto: ^3.0.1
+  file: ^6.1.2
+  http: ^0.13.4
+  logging: ^1.0.2
+  path: ^1.8.0
+  stack_trace: ^1.10.0
+  yaml: ^3.1.0
 dev_dependencies:
-  mockito: ^3.0.0-beta+3
-  test: ^1.0.0
+  mockito: ^5.0.16
+  test: ^1.19.5
 executables:
   dart_coveralls: null
